# rust-apply

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  action.yml  package-lock.json  package.json
public/: tailwind.css
src/: api.rs  config.rs.example  main.rs
src/components/: card.rs  header.rs  internshipCard.rs  internship_card.rs  is_paid_card.rs  keywords_list.rs  layout.rs  loading_screen.rs  mod.rs
src/pages/: internship_page.rs  internshipsPage.rs  internships_page.rs  mod.rs
