[package]
name = "apply"
version = "0.1.0"
authors = ["AgaspherGames <agasphergg@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
manganis = "0.2.2"
reqwest = { version = "0.12.4", features = ["json"] }
async-recursion = "1.1.1"
futures = "0.3.30"
serde = "1.0.201"
dotenv = "0.15.0"
chrono = "0.4.38"
